new page-register
added register page, labels and inputs are inside ul

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
           	<li class="photo"></li>
           	<li class="photo"></li>
           	<li class="photo"></li>
-          	<li class="photo"> <span class="glyphicon glyphicon-user"></span></li>
+          	<li class="photo"> </li>
+          	<span class="glyphicon glyphicon-user"></span>
 
           </ul>
         </nav>
 
-		 <div class="row text-center">
+		 <div class="row text-center buttons">
 		<button type="button" class="btn btn-info btn-lg">Save for later</button>
 		<button type="button" class="btn btn-danger btn-lg">Submit</button></div>
 
@@ -47,20 +48,34 @@
 			  	  <div class="panel-heading"><h5>Group A</h5></div>
 				  <div class="panel-body">
 				   
-				      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
-				      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+				   <ul class="nav-panel">
+				      <li>
+					      <label for="your name"><p>Brazil</p> </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
+					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"><p> Croatia </p></label> 
+					  </li>
 
-				      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
-				      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+ 					<li>
+					      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
+					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+				     </li>
 
-				      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
-				      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+                     <li>
+					      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
+					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+				     </li>
 
-				      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
-				      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+ 					<li>
+					      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
+					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+					</li>
 
-				      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
-				      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+					<li>
+
+					      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
+					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
+					</li>
+
+				      </ul>
 
 				    
 				  </div>
