register page updates
new image
margin and padding
refined ui

--- a/index.html
+++ b/index.html
@@ -71,23 +71,25 @@
 				      <li>
 					      <label for="your name"><p>United States</p> </label> <img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/30px-Flag_of_Brazil.svg.png">
 
+					      <div class="nap-input">
 					      <input type="text" class="point-input" placeholder="0">
-					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/30px-Flag_of_Brazil.svg.png">
+					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/30px-Flag_of_Brazil.svg.png"></div>
 					      <label for="your name"><p> Croatia </p></label> 
+					      
 					  </li>
 
  					<li>
-					      <label for="your name"> <p>Brazil</p> </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
+					      <label for="your name"> <p>Brazilknlk</p> </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
 					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
 				     </li>
 
                      <li>
-					      <label for="your name"> <p>Brazil</p> </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
+					      <label for="your name"> <p>Brazilkkkkkk</p> </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
 					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
 				     </li>
 
  					<li>
-					      <label for="your name"> Brazil </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
+					      <label for="your name"> Bra </label><img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/35px-Flag_of_Brazil.svg.png"> <input type="text" class="point-input" placeholder="0">
 					      <input type="text" class="point-input" placeholder="0"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Flag_of_Croatia.svg/35px-Flag_of_Croatia.svg.png"> <label for="your name"> Croatia </label> 
 					</li>
 
