--- a/register.html
+++ b/register.html
@@ -19,20 +19,20 @@
 			
 
 			<div  id="register-box">
-			<div class="toggle"><a href="#">Register</a> Login</div>
+			<div class="toggle"><a href="#"><h2>Register</h2></a></div>
 			<div class="register-form">
 
 			
 
 						<form class="form-horizontal" role="form">
 						  <div class="form-group">
-						    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+						    <label for="inputEmail3" class="col-sm-2 control-label"><p>Email</p></label>
 						    <div class="col-sm-10">
 						      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
 						    </div>
 						  </div>
 						  <div class="form-group">
-						    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+						    <label for="inputPassword3" class="col-sm-2 control-label"><p>Password</p></label>
 						    <div class="col-sm-10">
 						      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
 						    </div>
@@ -41,14 +41,14 @@
 						    <div class="col-sm-offset-2 col-sm-10">
 						      <div class="checkbox">
 						        <label>
-						          <input type="checkbox"> Remember me
+						          <input type="checkbox"><p> Remember me</p>
 						        </label>
 						      </div>
 						    </div>
 						  </div>
 						  <div class="form-group">
 						    <div class="col-sm-offset-2 col-sm-10">
-						      <button type="submit" class="btn btn-default">Sign in</button>
+						      <button type="submit" class="btn btn-info btn-md">Sign in</button>
 						    </div>
 						  </div>
 			</form>
