--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
 <div class="col-xs-12 text-center">
 
-		<button type="button" class="btn btn-danger btn-lg">Submit</button></div>
+		<button type="button" class="btn btn-success btn-md">Submit</button></div>
 
 
 								</div>
